# unity-object-tracking-wrapper

./: .gitignore  README.md  visp_mac_build.md
unityProject/: .gitignore
unityProject/Assets/: GustoUnityWrapper.bundle
unityProject/Assets/GameDataBundle/WOF1Bound/Animations/_all/HeadBand/: AnnaHeadband_Animation.anim  AnnaHeadband_Animation.controller
unityProject/Assets/GameDataBundle/WOF1Bound/Materials/_all/Flower/: FlowerMain_annaHeadband.mat  snoflakeMain_annaHeadband.mat
unityProject/Assets/GameDataBundle/WOF1Bound/Materials/_all/Headband/: Anna_Headband_Material.mat
unityProject/Assets/GameDataBundle/WOF1Bound/Models/: Sphere.fbx
unityProject/Assets/GameDataBundle/WOF1Bound/Models/_all/Headband/: annaHeadband_v3.fbx  annaPattern_flower.fbx  annaPattern_snowflake.fbx
unityProject/Assets/GameDataBundle/WOF1Bound/_prefabs/Effects/: AnnaHeadband_All.prefab  Effect-Crystal-Anna.prefab
unityProject/Assets/GameDataBundle/_shared/Shaders/_all/: Crystal-URP.shadergraph  DepthMask.mat
unityProject/Assets/GamePoly/Fireworks-Snowflake/Materials/: HDR_Snowball.mat
unityProject/Assets/GamePoly/clocktower-snowmagic/clocktower/Materials/Crystal/: ReflectionProbe-0.exr
unityProject/Assets/Resources/: gusto_webcam.json
unityProject/Assets/Scenes/: scene_ar.unity
unityProject/Assets/Scripts/: Script_ar.cs  TrackingModelConfig.cs  gusto_tracking_example.cs
unityProject/ProjectSettings/: ProjectSettings.asset
unityProject/UserSettings/: EditorUserSettings.asset
unityProject/UserSettings/Layouts/: default-2022.dwlt
vispWrapper/: CMakeLists.txt  GustoDebug.cpp  GustoDebug.h  GustoUnityWrapper.cpp  GustoUnityWrapper.h
